# web-calculator

./: .gitignore  Dockerfile  Makefile  README.md  README.rst  db.sqlite3  docker-compose.dev.yaml  docker-compose.yaml  log.txt  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  validators.py
calculator/: calculator.py  forms.py  models.py  setup.py  urls.py  validators.py  views.py
calculator/migrations/: 0001_initial.py  0003_auto_20200407_1723.py  0004_auto_20200424_1421.py  0005_auto_20201116_1650.py  0006_auto_20210330_1715.py  0007_auto_20210330_1716.py  0008_auto_20210330_1719.py
calculator/templates/calculator/: database.html  exp_detail.html  expression_detail.html  expression_details.html  index.html  result.html  update_expression.html
calculator/tests/: test_forms.py  test_urls.py  test_views.py
project/: settings.py
scripts/: entrypoint.sh
web_calculator/: .gitignore  README.rst  pyproject.toml  pytest.ini  settings.py  urls.py  wsgi.py
web_calculator/calculator/: calculator.py  forms.py  models.py  urls.py  validators.py  views.py
web_calculator/calculator/migrations/: 0002_auto_20191026_1149.py  0009_auto_20210401_1738.py  0010_auto_20210401_1758.py
web_calculator/calculator/templates/calculator/: delete_expression.html  expression_details.html
web_calculator/calculator/tests/: test_urls.py
web_calculator/templates/: base.html
